--- a/config/argocd/templates/00-presync-1.yaml
+++ b/config/argocd/templates/00-presync-1.yaml
@@ -5,7 +5,7 @@ metadata:
   name: sync-1
   annotations:
     argocd.argoproj.io/hook: Sync
-  namespace: openshift-gitops
+  namespace: myworkload
 spec:
   template:
     spec:
