--- a/config/argocd/templates/00-presync-1.yaml
+++ b/config/argocd/templates/00-presync-1.yaml
@@ -23,5 +23,5 @@ spec:
               oc get Secret -n openshift-gitops
 
       restartPolicy: Never
-      serviceAccountName: openshift-gitops-argocd-application-controller
+      serviceAccountName: default
   backoffLimit: 2
