--- a/config/argocd/templates/00-presync-1.yaml
+++ b/config/argocd/templates/00-presync-1.yaml
@@ -2,9 +2,9 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: sync-1
+  name: presync-1
   annotations:
-    argocd.argoproj.io/hook: Sync
+    argocd.argoproj.io/hook: PreSync
   namespace: myworkload
 spec:
   template:
