--- a/config/argocd/templates/00-presync-1.yaml
+++ b/config/argocd/templates/00-presync-1.yaml
@@ -2,9 +2,9 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: presync-1
+  name: postsync-1
   annotations:
-    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook: PostSync
   namespace: myworkload
 spec:
   template:
