--- a/config/argocd/templates/10-rolebinding.yaml
+++ b/config/argocd/templates/10-rolebinding.yaml
@@ -1,13 +1,27 @@
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "21"
+  creationTimestamp: null
+  name: argocd-namespace-admin
+  namespace: myworkload
+rules:
+  - apiGroups: ["*"]
+    resources: ["*"]
+    verbs: ["*"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   creationTimestamp: null
   name: argo-bad-binding
+  namespace: myworkload
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: admin
+  name: argocd-namespace-admin
 subjects:
   - kind: ServiceAccount
     name: openshift-gitops-argocd-application-controller
