--- a/config/argocd/templates/postsync.yaml
+++ b/config/argocd/templates/postsync.yaml
@@ -5,7 +5,7 @@ metadata:
   name: postsync-1
   annotations:
     argocd.argoproj.io/hook: PostSync
-  namespace: myworkload
+  namespace: openshift-gitops
 spec:
   template:
     spec:
@@ -23,5 +23,5 @@ spec:
               oc get Secret -n openshift-gitops
 
       restartPolicy: Never
-      serviceAccountName: default
+      serviceAccountName: openshift-gitops-argocd-application-controller
   backoffLimit: 1
